--- a/contact.html
+++ b/contact.html
@@ -233,7 +233,7 @@
                                     <div class="send-btn">
                                         <button type="submit" class="default-btn">Send Message</button>
                                     </div>
-                                    <div id="msgSubmit" class="h3 text-center hidden"></div>
+                                    <input class="default-btn" type="button" value="Submit">
                                     <div class="clearfix"></div>
                                 </div>
                             </div>
