--- a/contact.html
+++ b/contact.html
@@ -187,24 +187,23 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-12">
                                     <div class="form-group">
-                                        <input type="text" name="name" id="name" class="form-control" value="name"
-                                            required data-error="Please enter your name" placeholder="Enter your name">
+                                        <input type="text" name="name" id="name" class="form-control" required
+                                            data-error="Please enter your name" placeholder="Enter your name">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-6 col-md-12">
                                     <div class="form-group">
-                                        <input type="email" name="email" id="email" class="form-control" value="email"
-                                            required data-error="Please enter your email"
-                                            placeholder="Enter your email">
+                                        <input type="email" name="email" id="email" class="form-control" required
+                                            data-error="Please enter your email" placeholder="Enter your email">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-6 col-md-12">
                                     <div class="form-group">
-                                        <input type="text" name="phone_number" id="phone_number" value="phone" required
+                                        <input type="text" name="phone_number" id="phone_number" required
                                             data-error="Please enter your number" class="form-control"
                                             placeholder="Enter your phone">
                                         <div class="help-block with-errors"></div>
@@ -213,17 +212,25 @@
 
                                 <div class="col-lg-6 col-md-12">
                                     <div class="form-group">
-                                        <input type="text" value="subject" name="msg_subject" id="msg_subject"
+
+                                        <select class="form-control" value="New Form Submission!" name="Subject"
+                                            id="msg_subject">
+                                            <option value="" disabled selected>Subject</option>
+                                            <option value="New Website">New Website</option>
+                                            <option value="Enquiry">Enquiry</option>
+                                            <option value="Other">Other</option>
+                                        </select>
+                                        <!--<input type="text" placeholder="Subject" name="msg_subject" id="msg_subject"
                                             class="form-control" required data-error="Please enter your subject"
                                             placeholder="Enter your subject">
-                                        <div class="help-block with-errors"></div>
+                                        <div class="help-block with-errors"></div> -->
                                     </div>
                                 </div>
 
                                 <div class="col-lg-12 col-md-12">
                                     <div class="form-group">
-                                        <textarea name="message" value="body" class="form-control" id="message"
-                                            cols="30" rows="6" required data-error="Write your message"
+                                        <textarea name="message" class="form-control" id="message" cols="30" rows="6"
+                                            required data-error="Write your message"
                                             placeholder="Your Message"></textarea>
                                         <div class="help-block with-errors"></div>
                                     </div>
