--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                             quick websites! </p>
 
                         <ul class="banner-btn">
-                            <li><a href="contact.html" class="default-btn border-radius">Find out more</a></li>
-                            <li><a href="appointment.html" class="optional-btn border-radius">Contact</a></li>
+                            <li><a href="contact.html" class="default-btn border-radius">Contact</a></li>
+                            <!----     <li><a href="appointment.html" class="optional-btn border-radius">Contact</a></li> -->
                         </ul>
 
                         <ul class="main-banner-social">
@@ -404,7 +404,7 @@
                         </div>
 
                         <div class="about-btn">
-                            <a href="about.html" class="default-btn border-radius">Contact Us</a>
+                            <a href="contact.html" class="default-btn border-radius">Contact Us</a>
                             <a href="tel:61413864377" class="phone-number"><i class="ri-phone-fill"></i> +61 413 864
                                 377</a>
                         </div>
