--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,18 @@
 
     <link rel="icon" type="image/png" href="assets/images/sw-icon.ico">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0CW3XE8XPM"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0CW3XE8XPM');
+</script>
 
 <body>
 
