--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 
     <link rel="icon" type="image/png" href="assets/images/sw-icon.ico">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0CW3XE8XPM"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0CW3XE8XPM');
+</script>
 
 <body>
 
@@ -48,7 +60,7 @@
                 <div class="main-responsive-menu">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="assets/images/SWS.png" alt="logo">
+                            <img src="assets/images/SWS_LIGHT.png" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -59,7 +71,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img style="max-width:150px; max-height:150px;" src="assets/images/SWS.png" alt="logo">
+                        <img style="max-width:250px; max-height:150px;" src="assets/images/SWS_LIGHT.png" alt="logo">
                     </a>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -737,30 +749,30 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="appointment-form-wrap bg-2f3045">
                         <div class="content">
-                            <h3>Make an appointment</h3>
+                            <h3>Contact Us</h3>
                         </div>
 
-                        <form class="appointment-form">
+                        <form class="appointment-form" name="Home_Contact" data-netlify="true">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Enter your name">
+                                <input type="text" name="Name" class="form-control" placeholder="Enter your name">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Email address">
+                                <input type="text" name="Email" class="form-control" placeholder="Email address">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Appointment date" id="datepicker">
+                                <input type="text" name="Phone" class="form-control" placeholder="Phone">
                             </div>
                             <div class="form-group">
-                                <select class="selectize-filter">
-                                    <option value="1">Select Service</option>
-                                    <option value="2">Software development</option>
-                                    <option value="3">Website development</option>
-                                    <option value="4">Social media marketing</option>
-                                    <option value="5">Competitor research</option>
+                                <select class="selectize-filter" value="New Form Submission!" name="Subject">
+                                    <option value="" disabled selected>Subject</option>
+                                    <option value="New Website">New Website</option>
+                                    <option value="Enquiry">Enquiry</option>
+                                    <option value="Other">Other</option>
                                 </select>
                             </div>
                             <div class="form-group">
-                                <textarea name="message" class="form-control" placeholder="Write message..."></textarea>
+                                <textarea name="message" style="color:white;" class="form-control"
+                                    placeholder="Write message..."></textarea>
                             </div>
                             <button type="submit" class="default-btn">Submit</button>
                         </form>
@@ -774,6 +786,7 @@
 
 
     <!-- Start Case Studies Area -->
+    <!----
     <div class="case-studies-area bg-f6f7fb pt-100">
         <div class="container">
             <div class="section-title-wrap">
@@ -913,7 +926,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Case Studies Area -->
 
     <!-- Start Footer Area -->
