--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         <div class="main-navbar">
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
-                    <a class="navbar-brand" href="index-3.html">
+                    <a class="navbar-brand" href="index.html">
                         <img src="assets/images/SWS.png" alt="logo">
                     </a>
 
@@ -741,74 +741,47 @@
     <footer class="footer-area">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <div class="single-footer-widget">
                         <div class="footer-widget-logo">
-                            <a href="index.html"><img src="assets/images/logo-2.png" alt="image"></a>
+                            <a href="index.html"><img src="assets/images/SWS_DARK.png" alt="image"></a>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consec elit sed eiusmod tempor incididunt ut labore etdolore magna
-                            aliqua.</p>
+
                         <ul class="footer-widget-social">
                             <li><span>Follow us:</span></li>
                             <li><a href="https://www.facebook.com/" target="_blank"><i class="ri-facebook-line"></i></a>
                             </li>
-                            <li><a href="https://twitter.com/" target="_blank"><i class="ri-twitter-fill"></i></a></li>
-                            <li><a href="https://www.instagram.com/" target="_blank"><i
-                                        class="ri-instagram-fill"></i></a></li>
-                            <li><a href="https://www.linkedin.com/" target="_blank"><i class="ri-linkedin-fill"></i></a>
-                            </li>
+
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single-footer-widget ps-5">
-                        <h3>Quick links</h3>
-
-                        <ul class="quick-links">
-                            <li><a href="case-studies.html">Case studies</a></li>
-                            <li><a href="services-details.html">Managed services</a></li>
-                            <li><a href="terms-of-service.html">Terms & conditions</a></li>
-                            <li><a href="privacy-policy.html">Privacy policy</a></li>
-                            <li><a href="faq.html">Help & FAQ</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <div class="single-footer-widget">
-                        <h3>IT Services</h3>
+                        <h3>Quick Links</h3>
 
                         <ul class="quick-links">
-                            <li><a href="services-details.html">IT support services</a></li>
-                            <li><a href="services-details.html">IT consultancy</a></li>
-                            <li><a href="services-details.html">Cyber security</a></li>
-                            <li><a href="privacy-policy.html">Privacy policy</a></li>
-                            <li><a href="services-details.html">IT solutions</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <div class="single-footer-widget">
                         <h3>Contact info</h3>
 
                         <ul class="footer-information">
-                            <li><span>Address : </span>413 Mesa Drive North Las Vegas, NV 89032</li>
-                            <li><span>Phone : </span><a href="tel:15143125678">+1 (514) 312-5678</a></li>
-                            <li><span>Email : </span><a href="mailto:hello@qyaa.com">hello@qyaa.com</a></li>
+                            <li><span>Phone : </span><a href="tel:+61413864377">61 413 864 377</a></li>
+                            <li><span>Email : </span><a href="mailto:hello@simplyweb.com.au">hello@simplyweb.com.au</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="copyright-area">
-            <div class="container">
-                <div class="copyright-area-content">
-                    <p>© Qyaa is Proudly Owned by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a></p>
-                </div>
-            </div>
-        </div>
+
     </footer>
     <!-- End Footer Area -->
 
