--- a/index.html
+++ b/index.html
@@ -204,17 +204,7 @@
                                 </a>
                             </li>
 
-                            <li>
-                                <a href="https://www.linkedin.com/" target="_blank">
-                                    <i class="ri-linkedin-box-fill"></i>
-                                </a>
-                            </li>
 
-                            <li>
-                                <a href="https://www.pinterest.com/" target="_blank">
-                                    <i class="ri-pinterest-fill"></i>
-                                </a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -950,14 +940,12 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="single-footer-widget">
-                        <h3>IT Services</h3>
+                        <h3>Quick Links</h3>
 
                         <ul class="quick-links">
-                            <li><a href="services-details.html">IT support services</a></li>
-                            <li><a href="services-details.html">IT consultancy</a></li>
-                            <li><a href="services-details.html">Cyber security</a></li>
-                            <li><a href="privacy-policy.html">Privacy policy</a></li>
-                            <li><a href="services-details.html">IT solutions</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+
                         </ul>
                     </div>
                 </div>
@@ -967,9 +955,9 @@
                         <h3>Contact info</h3>
 
                         <ul class="footer-information">
-                            <li><span>Address : </span>413 Mesa Drive North Las Vegas, NV 89032</li>
-                            <li><span>Phone : </span><a href="tel:15143125678">+1 (514) 312-5678</a></li>
-                            <li><span>Email : </span><a href="mailto:hello@qyaa.com">hello@qyaa.com</a></li>
+                            <li><span>Phone : </span><a href="tel:+61413864377">61 413 864 377</a></li>
+                            <li><span>Email : </span><a href="mailto:hello@simplyweb.com.au">hello@simplyweb.com.au</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
