--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 <div class="main-responsive-menu">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="assets/images/SWS.png" alt="logo">
+                            <img src="assets/images/SWS_LIGHT.png" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/images/SWS.png" alt="logo">
+                        <img style="max-width:250px; max-height:150px;" src="assets/images/SWS_LIGHT.png" alt="logo">
                     </a>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -678,64 +678,8 @@
     </div>
     <!-- End Testimonials Area -->
 
-    <!-- Start Partner Area -->
-    <div class="partner-area pb-100">
-        <div class="container">
-            <div class="partner-title">
-                <span>OUR TRUSTED PARTNERS</span>
-            </div>
 
-            <div class="partner-slides owl-carousel owl-theme">
-                <div class="image-box">
-                    <a href="#" target="_blank"><img src="assets/images/partner/partner-6.png" alt="image"></a>
-                </div>
 
-                <div class="image-box">
-                    <a href="#" target="_blank"><img src="assets/images/partner/partner-7.png" alt="image"></a>
-                </div>
-
-                <div class="image-box">
-                    <a href="#" target="_blank"><img src="assets/images/partner/partner-8.png" alt="image"></a>
-                </div>
-
-                <div class="image-box">
-                    <a href="#" target="_blank"><img src="assets/images/partner/partner-9.png" alt="image"></a>
-                </div>
-
-                <div class="image-box">
-                    <a href="#" target="_blank"><img src="assets/images/partner/partner-10.png" alt="image"></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Partner Area -->
-
-    <!-- Start Newsletter Area -->
-    <div class="newsletter-area">
-        <div class="container">
-            <div class="newsletter-inner-box">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="newsletter-content">
-                            <h3>Subscribe to us to get update news & tips in your inbox</h3>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <form class="newsletter-form">
-                            <input type="email" class="input-newsletter" placeholder="Email address..." name="EMAIL"
-                                required autocomplete="off">
-
-                            <button type="submit" class="default-btn">Subscribe</button>
-
-                            <div id="validator-newsletter" class="form-result"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Newsletter Area -->
 
     <!-- Start Footer Area -->
     <footer class="footer-area">
