--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
                 <div class="main-responsive-menu">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="assets/images/SWS.png" alt="logo">
+                            <img src="assets/images/SWS_LIGHT.png" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/images/SWS.png" alt="logo">
+                        <img style="max-width:250px; max-height:150px;" src="assets/images/SWS_LIGHT.png" alt="logo">
                     </a>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
