--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@
     <div class="page-banner-area item-bg-5">
         <div class="container">
             <div class="page-banner-content">
-                <h2>Case Studies</h2>
+                <h2>Portfolio</h2>
 
                 <ul>
                     <li>
