--- a/index.html
+++ b/index.html
@@ -528,8 +528,10 @@
 
                 <div class="col-lg-6 col-md-12">
                     <div class="choose-us-image" data-speed="0.02" data-revert="true">
-                        <img style="max-height:690px; max-width:670px; border-radius:50%;margin-left:55px;"
-                            src="assets/images/small_business.jpg" alt="image">
+                        <img style="max-height:690px; max-width:670px; border-radius:50%;"
+                            src="assets/images/small_business_LG.jpg"
+                            srcset="assets/images/small_business_LG.jpg 490w, assets/images/small_business_SM.jpg 250w"
+                            alt="image">
 
                         <div class="image-shape-1" data-speed="0.08" data-revert="true">
                             <img src="assets/images/choose/shape-1.png" alt="image">
