services page done

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     <h3>
                         <a href="services-details.html">Google Analytics</a>
                     </h3>
-                    <p>Want to keep an eye on whos on your website? We install Google Analytics for free to monitor
+                    <p>Keep an eye on whos on your website? We install Google Analytics for free to monitor
                         traffic and where it comes from.</p>
 
                 </div>
