--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav m-auto">
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link active">
+                                <a href="index.html" class="nav-link ">
                                     Home
 
                                 </a>
@@ -86,7 +86,7 @@
                                 <a href="about.html" class="nav-link">About</a>
                             </li>
                             <li class="nav-item">
-                                <a href="services.html" class="nav-link">Services</a>
+                                <a href="services.html" class="nav-link active">Services</a>
                             </li>
                             <li class="nav-item">
                                 <a href="portfolio.html" class="nav-link">Portfolio</a>
@@ -113,30 +113,7 @@
             </div>
         </div>
 
-        <div class="others-option-for-responsive">
-            <div class="container">
-                <div class="dot-menu">
-                    <div class="inner">
-                        <div class="circle circle-one"></div>
-                        <div class="circle circle-two"></div>
-                        <div class="circle circle-three"></div>
-                    </div>
-                </div>
 
-                <div class="container">
-                    <div class="option-inner">
-                        <div class="others-options d-flex align-items-center">
-
-
-                            <div class="option-item">
-                                <a href="tel:+61413864377" class="default-btn">+61 413 864 377</a>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <!-- End Navbar Area -->
 
@@ -185,120 +162,122 @@
     <div class="services-area pt-100 pb-75">
         <div class="container">
             <div class="section-title">
-                <span>WE PROVIDE SERVICES</span>
-                <h2>The kind of services that our company provides to our clients</h2>
+                <span>OUR SERVICES</span>
+                <h2>Big Value to all kinds of business</h2>
             </div>
 
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb">
-                        <div class="icon">
-                            <i class="flaticon-consulting"></i>
-                        </div>
-                        <h3>
-                            <a href="services-details.html">IT Consultancy</a>
-                        </h3>
-                        <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo lacinia eget
-                            consectetur sed convallis at tellus.</p>
-                        <a href="services-details.html" class="services-btn">Learn more</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb">
+                    <div class="single-services-card bg-f9fafb bg-image">
                         <div class="icon">
                             <i class="flaticon-product-design"></i>
                         </div>
                         <h3>
-                            <a href="services-details.html">Product Development</a>
+                            <a href="#">Fully Responsive</a>
                         </h3>
-                        <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo lacinia eget
-                            consectetur sed convallis at tellus.</p>
-                        <a href="services-details.html" class="services-btn">Learn more</a>
+                        <p>Your website will fit all mobile screens sizes, tablets, and desktop sizes so new clients can
+                            access your site from anywhere on any device.
+                        </p>
+
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb">
+
+                    <div class="single-services-card bg-f9fafb bg-image">
                         <div class="icon">
                             <i class="flaticon-technical-support"></i>
                         </div>
                         <h3>
-                            <a href="services-details.html">IT Support</a>
+                            <a href="#">SEO Optimized</a>
                         </h3>
-                        <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo lacinia eget
-                            consectetur sed convallis at tellus.</p>
-                        <a href="services-details.html" class="services-btn">Learn more</a>
+                        <p>Let us take care of your on-site SEO with in built caching, image optimisation and clean code
+                            that is friendly to web crawlers.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb">
+                    <div class="single-services-card bg-f9fafb bg-image">
                         <div class="icon">
                             <i class="flaticon-cyber-security"></i>
                         </div>
                         <h3>
-                            <a href="services-details.html">Cyber Security</a>
+                            <a href="#">Blazingly Quick</a>
                         </h3>
-                        <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo lacinia eget
-                            consectetur sed convallis at tellus.</p>
-                        <a href="services-details.html" class="services-btn">Learn more</a>
+                        <p>We guarentee a PageSpeed Insights score of 90+ across Mobile and Desktop devices.This
+                            basically
+                            means lightning fast! </p>
+
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb">
+
+                    <div class="single-services-card bg-f9fafb bg-image">
                         <div class="icon">
                             <i class="flaticon-mobile-app"></i>
                         </div>
                         <h3>
-                            <a href="services-details.html">App Development</a>
+                            <a href="#">Google Analytics</a>
                         </h3>
-                        <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo lacinia eget
-                            consectetur sed convallis at tellus.</p>
-                        <a href="services-details.html" class="services-btn">Learn more</a>
+                        <p>Keep an eye on whos on your website? We install Google Analytics for free to monitor
+                            traffic and where it comes from.</p>
+
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb">
-                        <div class="icon">
-                            <i class="flaticon-ux-design"></i>
-                        </div>
-                        <h3>
-                            <a href="services-details.html">UX/UI Design</a>
-                        </h3>
-                        <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo lacinia eget
-                            consectetur sed convallis at tellus.</p>
-                        <a href="services-details.html" class="services-btn">Learn more</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb">
+                    <div class="single-services-card bg-f9fafb bg-image">
                         <div class="icon">
                             <i class="flaticon-web-development"></i>
                         </div>
                         <h3>
-                            <a href="services-details.html">Web Development</a>
+                            <a href="#">Web Development</a>
                         </h3>
-                        <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo lacinia eget
-                            consectetur sed convallis at tellus.</p>
-                        <a href="services-details.html" class="services-btn">Learn more</a>
+                        <p>Need a new POC? New form or custom front-end? We'll build it from the ground up with industry
+                            leading frameworks such as Vue and NuxtJS </p>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="single-services-card bg-f9fafb bg-image">
+                        <div class="icon">
+                            <i class="flaticon-solution"></i>
+                        </div>
+                        <h3>
+                            <a href="#">API's & Cloud</a>
+                        </h3>
+                        <p>Connect and automate your workflows with API integrations built on top of proven cloud
+                            providers
+                            such as AWS and GCP.</p>
+
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
                     <div class="single-services-card bg-f9fafb">
                         <div class="icon">
-                            <i class="flaticon-digital-marketing"></i>
+                            <i class="flaticon-user-experience"></i>
                         </div>
                         <h3>
-                            <a href="services-details.html">Digital Marketing</a>
+                            <a href="#">Logo + Graphic Design</a>
                         </h3>
-                        <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo lacinia eget
-                            consectetur sed convallis at tellus.</p>
-                        <a href="services-details.html" class="services-btn">Learn more</a>
+                        <p>Make a lasting impression with our custom graphic design that's ready to build your brand and
+                            business image. </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="single-services-card bg-f9fafb">
+                        <div class="icon">
+                            <i class="flaticon-customer-service"></i>
+                        </div>
+                        <h3>
+                            <a href="#">Client Support</a>
+                        </h3>
+                        <p>We love working with our clients and building relationships and we honor that with our
+                            commitment to on-going support. </p>
                     </div>
                 </div>
             </div>
@@ -306,44 +285,104 @@
     </div>
     <!-- End Services Area -->
 
-    <!-- Start Technology Area -->
-    <div class="technology-area pb-100">
+    <!-- Start Contact Area -->
+    <div class="contact-area ptb-100">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-12">
-                    <div class="technology-content" data-speed="0.02" data-revert="true">
-                        <span>HOW CAN WE HELP?</span>
-                        <h3>We can help in any way in the field of IT service and technology</h3>
-                        <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Praesent sapien massa,
-                            convallis a pellentesque nec egestas non nisi. Mauris blandit aliquet elit eget tincidunt
-                            nibh pulvinar rutrum congue leo eget malesuada.</p>
+            <div class="row">
+                <div class="col-lg-7 col-md-7">
+                    <div class="contact-form-wrap">
+                        <h3>How can we help?</h3>
 
-                        <div class="technology-inner-content">
-                            <div class="number">01</div>
-                            <h4>Monthly IT support</h4>
-                            <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Praesent sapien
-                                pellentesque nec egestas non nisi.</p>
-                        </div>
+                        <form id="contactForm" name="contact" method="POST" data-netlify="true">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-12">
+                                    <div class="form-group">
+                                        <input type="text" name="name" id="name" class="form-control" required
+                                            data-error="Please enter your name" placeholder="Enter your name">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
 
-                        <div class="technology-inner-content">
-                            <div class="number">02</div>
-                            <h4>Clear and transparent flat rates</h4>
-                            <p>vehicula elementum sed sit amet dui. Praesent sapien massa convallis a ellentesque nec
-                                egestas non nisi.</p>
-                        </div>
+                                <div class="col-lg-6 col-md-12">
+                                    <div class="form-group">
+                                        <input type="email" name="email" id="email" class="form-control" required
+                                            data-error="Please enter your email" placeholder="Enter your email">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-md-12">
+                                    <div class="form-group">
+                                        <input type="text" name="phone_number" id="phone_number" required
+                                            data-error="Please enter your number" class="form-control"
+                                            placeholder="Enter your phone">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-md-12">
+                                    <div class="form-group">
+
+                                        <select class="form-control" value="New Form Submission!" name="Subject"
+                                            id="msg_subject">
+                                            <option value="" disabled selected>Subject</option>
+                                            <option value="New Website">New Website</option>
+                                            <option value="Enquiry">Enquiry</option>
+                                            <option value="Other">Other</option>
+                                        </select>
+                                        <!--<input type="text" placeholder="Subject" name="msg_subject" id="msg_subject"
+                                            class="form-control" required data-error="Please enter your subject"
+                                            placeholder="Enter your subject">
+                                        <div class="help-block with-errors"></div> -->
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-12 col-md-12">
+                                    <div class="form-group">
+                                        <textarea name="message" class="form-control" id="message" cols="30" rows="6"
+                                            required data-error="Write your message"
+                                            placeholder="Your Message"></textarea>
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-12 col-md-12">
+                                    <div class="send-btn">
+                                        <button type="submit" class="default-btn">Send Message</button>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
 
-                <div class="col-lg-6 col-md-12">
-                    <div class="technology-image" data-speed="0.02" data-revert="true">
-                        <img src="assets/images/technology/technology-1.jpg" alt="image">
+                <div class="col-lg-5 col-md-5">
+                    <div class="contact-get-in-touch">
+                        <h3>Get in touch</h3>
+
+
+                        <div class="inner-box">
+                            <div class="icon">
+                                <i class="flaticon-call"></i>
+                            </div>
+                            <span>Phone :</span>
+                            <p><a href="tel:15143125678">+61 413 864 377</a></p>
+                        </div>
+
+                        <div class="inner-box">
+                            <div class="icon">
+                                <i class="flaticon-email"></i>
+                            </div>
+                            <span>Email :</span>
+                            <p><a href="mailto:hello@qyaa.com">hello@simplyweb.com.au</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- End Technology Area -->
-
+    <!-- End Contact Area -->
 
     <!-- Start Footer Area -->
     <footer class="footer-area">
