--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 
-    <title>Simply Web Solutions</title>
+    <title>Simply Web Solutions - Web Design for Small Business</title>
 
     <link rel="icon" type="image/png" href="assets/images/sw-icon.ico">
 </head>
@@ -88,7 +88,7 @@
                                 <a href="services.html" class="nav-link">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a href="portfolio.html" class="nav-link">Portfolio</a>
+                                <a href="portfolio.html" class="nav-link">Recent Work</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
@@ -458,14 +458,14 @@
                         <h3>Big Results For Small Business</h3>
                         <p>We've spoken to small business owners and listened. It can be difficult for any new or
                             existing
-                            small business to find thousdands of dollars upfront to purchase a new website they don't
+                            small business to find thousands of dollars upfront to purchase a new website they don't
                             know will deliver. This leaves them in a tricky situation where they either can't afford a
                             good website and get left behind - Or fork out cash they don't have.
                             <br>
                             <br>
                             That's why we've come
                             up with our 0$ Upfront and $150 a Month approach. Making it more manageable and <span
-                                style="font-style:italic">simpler</span> for small business to start their digital
+                                style="font-style:italic">simpler</span> for small business to begin their digital
                             footprint today. </p>
 
                         <div class="choose-inner-content">
@@ -604,12 +604,12 @@
                             <div class="accordion-item">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    01. Why choose Dotto Web Solutions?
+                                    01. Why choose Simply Web Solutions?
                                 </button>
                                 <div id="collapseOne" class="accordion-collapse collapse show"
                                     data-bs-parent="#FaqAccordion">
                                     <div class="accordion-body">
-                                        <p>We don't pride ourselves on just our product - Our real show winner is our
+                                        <p>We don't pride ourselves on just our product - Our real winner is our
                                             customer service and commitment to you. We're invested in ensuring you get
                                             the best value by delivering high-quality websites with outstanding service
                                             at an affordable price. </p>
@@ -694,7 +694,7 @@
                                                 which integrate
                                                 with your website are outside of our provision and will be charged
 
-                                                from where ever third-party you may have already set this up from.
+                                                from the third-party you purchased these services from.
                                             </span></p>
                                     </div>
                                 </div>
