--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
 
 
-    <title>Simply Web Solutions</title>
+    <title>Simply Web Solutions - Web Design for Small Business</title>
 
     <link rel="icon" type="image/png" href="assets/images/sw-icon.ico">
 </head>
@@ -78,19 +78,19 @@
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav m-auto">
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link active">
+                                <a href="index.html" class="nav-link ">
                                     Home
 
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="about.html" class="nav-link">About</a>
+                                <a href="about.html" class="nav-link active">About</a>
                             </li>
                             <li class="nav-item">
                                 <a href="services.html" class="nav-link">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a href="portfolio.html" class="nav-link">Portfolio</a>
+                                <a href="portfolio.html" class="nav-link">Recent Work</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
