--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
 
 
-    <title>Simply Web Solutions</title>
+    <title>Simply Web Solutions - Web Design for Small Business</title>
 
     <link rel="icon" type="image/png" href="assets/images/sw-icon.ico">
 </head>
@@ -78,7 +78,7 @@
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav m-auto">
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link active">
+                                <a href="index.html" class="nav-link ">
                                     Home
 
                                 </a>
@@ -90,7 +90,7 @@
                                 <a href="services.html" class="nav-link">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a href="portfolio.html" class="nav-link">Portfolio</a>
+                                <a href="portfolio.html" class="nav-link active">Recent Work</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
@@ -187,7 +187,7 @@
         <div class="container">
             <div class="section-title">
                 <span>CASE STUDIES</span>
-                <h2>Recent case studies on how we have helped our clients</h2>
+                <h2>Some of the recent local businesses we have proudly worked with</h2>
             </div>
 
             <div class="row">
@@ -195,18 +195,17 @@
                     <div class="single-case-studies-box">
                         <div class="row">
                             <div class="col-lg-5">
-                                <div class="case-image"></div>
+                                <div class="case-image  bg-3"></div>
                             </div>
 
                             <div class="col-lg-7">
                                 <div class="case-content">
-                                    <span>Web case</span>
+                                    <span>Website Design</span>
                                     <h3>
-                                        <a href="case-studies-details.html">Cyber security solutions</a>
+                                        <a href="https://enhancedbydarcie.com.au/">Enhanced By Darcie</a>
                                     </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
+                                    <p> Beauty & Cosmetics</p>
+
                                 </div>
                             </div>
                         </div>
@@ -214,7 +213,7 @@
                 </div>
 
                 <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
+                    <div class="single-case-studies-box ">
                         <div class="row">
                             <div class="col-lg-5">
                                 <div class="case-image bg-2"></div>
@@ -222,35 +221,16 @@
 
                             <div class="col-lg-7">
                                 <div class="case-content">
-                                    <span>Web case</span>
+                                    <span>Website Design</span>
                                     <h3>
-                                        <a href="case-studies-details.html">Custom web solutions</a>
+                                        <a href="https://ripplechiropractic.com.au/">Ripple Chiropractic</a>
                                     </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <div class="case-image bg-3"></div>
-                            </div>
 
-                            <div class="col-lg-7">
-                                <div class="case-content">
-                                    <span>Web case</span>
-                                    <h3>
-                                        <a href="case-studies-details.html">Web case solutions</a>
-                                    </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
+                                    <p>Health & Medical</p>
+
+
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -266,13 +246,11 @@
 
                             <div class="col-lg-7">
                                 <div class="case-content">
-                                    <span>Web case</span>
+                                    <span>Website Design</span>
                                     <h3>
-                                        <a href="case-studies-details.html">UX case studies</a>
+                                        <a href="https://bentobros.com.au/">Bento Bros</a>
                                     </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
+                                    <p>E-Commerce</p>
                                 </div>
                             </div>
                         </div>
@@ -288,167 +266,11 @@
 
                             <div class="col-lg-7">
                                 <div class="case-content">
-                                    <span>Web case</span>
+                                    <span>API Development</span>
                                     <h3>
-                                        <a href="case-studies-details.html">IT system improvements</a>
+                                        <a href="https://www.momentumartsstudios.com.au/">Momentum Arts Studios</a>
                                     </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <div class="case-image bg-6"></div>
-                            </div>
-
-                            <div class="col-lg-7">
-                                <div class="case-content">
-                                    <span>Web case</span>
-                                    <h3>
-                                        <a href="case-studies-details.html">Digital marketing solutions</a>
-                                    </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <div class="case-image"></div>
-                            </div>
-
-                            <div class="col-lg-7">
-                                <div class="case-content">
-                                    <span>Web case</span>
-                                    <h3>
-                                        <a href="case-studies-details.html">Cyber security solutions</a>
-                                    </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <div class="case-image bg-2"></div>
-                            </div>
-
-                            <div class="col-lg-7">
-                                <div class="case-content">
-                                    <span>Web case</span>
-                                    <h3>
-                                        <a href="case-studies-details.html">Custom web solutions</a>
-                                    </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <div class="case-image bg-3"></div>
-                            </div>
-
-                            <div class="col-lg-7">
-                                <div class="case-content">
-                                    <span>Web case</span>
-                                    <h3>
-                                        <a href="case-studies-details.html">Web case solutions</a>
-                                    </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <div class="case-image bg-4"></div>
-                            </div>
-
-                            <div class="col-lg-7">
-                                <div class="case-content">
-                                    <span>Web case</span>
-                                    <h3>
-                                        <a href="case-studies-details.html">UX case studies</a>
-                                    </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <div class="case-image bg-5"></div>
-                            </div>
-
-                            <div class="col-lg-7">
-                                <div class="case-content">
-                                    <span>Web case</span>
-                                    <h3>
-                                        <a href="case-studies-details.html">IT system improvements</a>
-                                    </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 case-studies-more-item">
-                    <div class="single-case-studies-box">
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <div class="case-image bg-6"></div>
-                            </div>
-
-                            <div class="col-lg-7">
-                                <div class="case-content">
-                                    <span>Web case</span>
-                                    <h3>
-                                        <a href="case-studies-details.html">Digital marketing solutions</a>
-                                    </h3>
-                                    <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit
-                                        aliquet elit eget tincidunt nibh pulvinar curabitur.</p>
-                                    <a href="case-studies-details.html" class="case-btn">Learn more</a>
+                                    <p>Dance School</p>
                                 </div>
                             </div>
                         </div>
@@ -456,9 +278,6 @@
                 </div>
             </div>
 
-            <div class="load-more-btn">
-                <a href="#" id="loadmore" class="default-btn">Load More</a>
-            </div>
         </div>
     </div>
     <!-- End Case Studies Area -->
