--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 
-    <title>Simply Web Solutions</title>
+    <title>Simply Web Solutions - Web Design for Small Business</title>
 
     <link rel="icon" type="image/png" href="assets/images/sw-icon.ico">
 </head>
@@ -89,7 +89,7 @@
                                 <a href="services.html" class="nav-link active">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a href="portfolio.html" class="nav-link">Portfolio</a>
+                                <a href="portfolio.html" class="nav-link">Recent Work</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
@@ -163,7 +163,7 @@
         <div class="container">
             <div class="section-title">
                 <span>OUR SERVICES</span>
-                <h2>Big Value to all kinds of business</h2>
+                <h2>Big value to all kinds of business</h2>
             </div>
 
             <div class="row justify-content-center">
